# handanim

./: .buildinfo  .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  _internals.md  dev-requirements.txt  development.py  genindex.html  handanim.animations.html  handanim.core.html  handanim.html  handanim.primitives.html  handanim.stylings.html  index.html  main.py  modules.html  objects.inv  py-modindex.html  pyproject.toml  repo_overview.md  requirements.txt  search.html  searchindex.js  todo.md  todo_font_modelling.md  working_plan.md
.doctrees/: environment.pickle  handanim.animations.doctree  handanim.core.doctree  handanim.doctree  handanim.primitives.doctree  handanim.stylings.doctree  index.doctree  modules.doctree
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml
_sources/: handanim.primitives.rst.txt
docs/source/: conf.py  handanim.animations.rst  handanim.core.rst  handanim.primitives.rst  handanim.rst  handanim.stylings.rst  index.rst  modules.rst
examples/: a_plus_b_square.py  custom_font.py  distributive_property.py  first_scene.py  hershey_math.py  math.py  ml_workflow_demo.py  pythagoras.py  solar_system.py  tikz_beamer_demo.py
fonts/custom/: handanimtype1.json
src/handanim/: __init__.py  main.py
src/handanim/animations/: __init__.py  camera.py  color_transition.py  fade.py  rotate.py  sketch.py  translate.py  zoom.py
src/handanim/core/: __init__.py  animation.py  cache.py  draw_ops.py  drawable.py  renderer.py  scene.py  styles.py  tikz_renderer.py  utils.py  viewport.py
src/handanim/primitives/: __init__.py  arrow.py  base.py  curves.py  ellipse.py  eraser.py  flowchart.py  hershey_constants.py  lines.py  math.py  polygons.py  raster_image.py  svg.py  table.py  text.py  vector_svg.py
src/handanim/stylings/: color.py  fillpatterns.py  fonts.py  strokes.py  utils.py
src/handanim_ai/: models.py
src/handanim_ai/prompts/: big_picture.txt  codegen.txt
src/handmanim/: constants.py  main.py  scene.py  transformed_context.py
src/handmanim/primitives/: __init__.py  base.py  curves.py  ellipse.py  line.py  lines.py  polygons.py  rectangle.py  shapes.py  text.py
src/handmanim/stylings/: fill_patterns.py  fillpatterns.py  styles.py  utils.py
tests/: conftest.py  placeholder.py  pythagorus.py  test_autofit.py  test_core.py  test_opsset.py  test_public_api.py  test_scene.py  test_sketch.py  test_visuals.py
tests/animations/: test_camera.py  test_color_transition.py  test_rotate.py  test_sketch.py
tests/core/: test_opsset.py  test_scene.py  test_tikz_renderer.py
tests/drawables/: test_flowchart.py  test_fonts.py  test_primitives.py  test_raster_image.py  test_table.py
tools/: .gitignore
tools/fontmaker/: handanimtype1.json  make_fonts.py  make_grid_sheet.py  symbols.py
tools/stroke_model/: .gitignore  collect.py  export.py  model.py  preprocess.py  symbols.py  train.py  unipen_train.ipynb
