[tool.poetry]
packages = [
    { include = "handanim", from = "src" },
    { include = "handanim_ai", from = "src" },
]
name = "handanim"
version = "0.1.0"
description = ""
authors = ["Subhrajyoty Roy <subhrajyotyroy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cairocffi = ">=1.7.1,<2.0.0"
numpy = ">=2.2.4,<3.0.0"
svgwrite = ">=1.4.3,<2.0.0"
moviepy = ">=2.1.2,<3.0.0"
pycairo = ">=1.27.0,<2.0.0"
fonttools = ">=4.47.0,<5.0.0"
matplotlib = ">=3.7.0,<4.0.0"

[tool.poetry.group.dev.dependencies]
sphinx = "^8.2.3"
furo = "^2024.8.6"
vtracer = "^0.6.11"
svgpathtools = "^1.7.0"
opencv-python = "^4.11.0.86"
scikit-image = "^0.25.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
ai = []
