[tool.poetry]
packages = [
    { include = "handanim", from = "src" },
    { include = "handanim_ai", from = "src" },
]
name = "handanim"
version = "0.1.0"
description = ""
authors = ["Subhrajyoty Roy <subhrajyotyroy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cairocffi = ">=1.7.1,<2.0.0"
numpy = ">=2.2.4,<3.0.0"
moviepy = ">=2.1.2,<3.0.0"
pycairo = ">=1.27.0,<2.0.0"
fonttools = ">=4.47.0,<5.0.0"
matplotlib = ">=3.7.0,<4.0.0"
svgelements = ">=1.9.6"
urllib3 = "^2.6.3"

[tool.poetry.group.dev.dependencies]
sphinx = "^8.2.3"
furo = "^2024.8.6"
scikit-image = "^0.25.2"
pytest = "^8.0.0"
pytest-snapshot = "^0.9.0"
pytest-cov = "^7.1.0"
ruff = "^0.15.12"
mypy = "^2.1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.train]
optional = true

[tool.poetry.group.train.dependencies]
torch = ">=2.3.0,<3.0.0"
torchvision = ">=0.18.0,<1.0.0"
onnx = ">=1.16.0,<2.0.0"
onnxruntime = ">=1.18.0,<2.0.0"
huggingface-hub = ">=0.23.0,<1.0.0"
pandas = ">=2.0.0,<3.0.0"
tqdm = ">=4.0.0,<5.0.0"
vtracer = "^0.6.11"
opencv-python = "^4.11.0.86"

[tool.poetry.group.stroke]
optional = true

[tool.poetry.group.stroke.dependencies]
onnxruntime = ">=1.18.0,<2.0.0"
huggingface-hub = ">=0.23.0,<1.0.0"

[tool.poetry.extras]
ai = []
stroke = ["onnxruntime", "huggingface-hub"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = [
    "E501", # line too long — handled by line-length setting above
    "B008", # function call in default argument — intentional (style objects as defaults)
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
no_strict_optional = true
