[tool.poetry]
packages = [
    { include = "handanim", from = "src" },
    { include = "handanim_ai", from = "src" },
]
name = "handanim"
version = "0.1.0"
description = "A Python library to create whiteboard-style, hand-drawn animations for educational videos, tutorials or data storytelling."
authors = ["Subhrajyoty Roy <subhrajyotyroy@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Video",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
keywords = [
    "animation",
    "hand-drawn",
    "manim",
    "math",
    "whiteboard",
    "education",
]

[tool.poetry.urls]
Homepage = "https://github.com/subroy13/handanim"
Documentation = "https://subroy13.github.io/handanim/"
Repository = "https://github.com/subroy13/handanim.git"
Issues = "https://github.com/subroy13/handanim/issues"
Changelog = "https://github.com/subroy13/handanim/blob/master/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.11"
cairocffi = ">=1.7.1,<2.0.0"
numpy = ">=2.2.4,<3.0.0"
moviepy = ">=2.1.2,<3.0.0"
pycairo = ">=1.27.0,<2.0.0"
fonttools = ">=4.47.0,<5.0.0"
matplotlib = ">=3.7.0,<4.0.0"
svgelements = ">=1.9.6"
urllib3 = "^2.6.3"
hershey-fonts = "^2.1.0"

[tool.poetry.group.dev.dependencies]
sphinx = "^8.2.3"
furo = "^2024.8.6"
vtracer = "^0.6.11"
opencv-python = "^4.11.0.86"
scikit-image = "^0.25.2"
pytest = "^8.0.0"
pytest-snapshot = "^0.9.0"
pytest-cov = "^7.1.0"
ruff = "^0.15.12"
mypy = "^2.1.0"
readme-renderer = "^45.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
ai = []

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = [
    "E501", # line too long — handled by line-length setting above
    "B008", # function call in default argument — intentional (style objects as defaults)
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
no_strict_optional = true
